ci: add lefthook and precommit CI pipeline

--- a/.github/workflows/lefthook-precommit.yml
+++ b/.github/workflows/lefthook-precommit.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install Lefthook
         run: sudo apt install lefthook && lefthook install
       - name: Run Lefthook
-        run: lefthook run pre-commit
+        run: lefthook run pre-commit --all-files
