--- a/.lefthook.yaml
+++ b/.lefthook.yaml
@@ -3,7 +3,7 @@
 ---
 remotes:
   - git_url: https://github.com/boozt-platform/lefthook.git
-    ref: v1.3.0
+    ref: v1.4.0
     configs:
       # lint commit messages based by the conventional commits
       - hooks/commitlint/.lefthook.yaml
@@ -13,3 +13,5 @@ remotes:
       - hooks/markdown-lint/.lefthook.yaml
       # lint the yaml (.yml, .yaml) files
       - hooks/yamllint/.lefthook.yaml
+      # terraform validation, fmt and tests
+      - hooks/terraform/.lefthook.yaml
